# fleet-project

./: .gitignore  Cargo.toml  README.md  build.rs  build_release.sh  compile_shaders.sh
.cargo/: config.toml
blender/: carrier.blend  explosion.blend  fighter.blend  miner.blend
crates/background/: Cargo.toml
crates/background/src/: lib.rs
crates/components-and-resources/: Cargo.toml
crates/components-and-resources/src/: components.rs  formations.rs  gpu_structs.rs  lib.rs  model.rs  texture_manager.rs  utils.rs
crates/components-and-resources/src/components/: build_queue.rs  functions.rs  people.rs
crates/components-and-resources/src/resources/: glyph_layout_cache.rs  gpu_buffer.rs  keyboard.rs  mod.rs  mouse.rs  ray.rs
crates/ray-collisions/: Cargo.toml
crates/ray-collisions/src/: dynamic_bvh.rs  lib.rs
crates/rendering/: Cargo.toml
crates/rendering/shaders/: 2d.vert  background.frag  bounding_box.vert  flat_colour.vert  flat_colour_bloom.frag  fullscreen_tri.vert  godray_blur.frag  ship.frag  ship.vert  z_facing.vert
crates/rendering/shaders/compiled/: 2d.vert.spv  bounding_box.vert.spv  circle.vert.spv  flat_colour.vert.spv  flat_colour_bloom.frag.spv  godray_blur.frag.spv  ship.frag.spv  ship.vert.spv  tonemap.frag.spv  z_facing.vert.spv
crates/rendering/src/: lib.rs  passes.rs
crates/systems/: Cargo.toml
crates/systems/src/: combat.rs  controls.rs  find_functions.rs  lib.rs  people.rs  rendering.rs  resource_management.rs  steering.rs
crates/systems/src/steering/: primitives.rs
models/: asteroid.glb  carrier.glb  explosion.glb  fighter.glb  miner.glb
shaders/: background.frag  blur.frag  bounding_box.vert  circle.vert  flat_colour.frag  flat_colour.vert  godray_blur.frag  kawase_downsample.frag  kawase_upsample.frag  ship.frag  ship.vert  tonemap.frag
shaders/compiled/: background.frag.spv  blur.frag.spv  bounding_box.vert.spv  flat_colour.frag.spv  fullscreen_tri.vert.spv  godray_blur.frag.spv  kawase_downsample.frag.spv  kawase_upsample.frag.spv  line.vert.spv  ship.frag.spv  ship.vert.spv
src/: background.rs  components.rs  ecs.rs  gpu_structs.rs  main.rs  rendering.rs  systems.rs  utils.rs
src/resources/: gpu_buffer.rs  keyboard.rs  mod.rs  ray.rs
textures/: mined_out_asteroid.xcf
unused/: acceleration_tree.rs  blit.frag  godray_ships.vert
