[package]
name = "fleet-renderer"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
bytemuck = "1.5.1"
pollster = "0.2.4"
ultraviolet = "0.8.1"
wgpu = { version = "0.8.1", features = ["cross"] }
winit = "0.25.0"
web-sys = { version = "0.3.50", optional = true }
rand = "0.8.3"
bevy_ecs = "0.5.0"
bevy_tasks = "0.5.0"
env_logger = "0.8.3"

# Background
spade = "1.8.2"
tint = "1.0.1"
noise = { version = "0.7.0", default-features = false }

colstodian = { git = "https://github.com/termhn/colstodian", branch = "main" }

systems = { path = "crates/systems" }
components-and-resources = { path = "crates/components-and-resources"}
rendering = { path = "crates/rendering" }
wgpu_glyph = "0.12.0"

[features]
default = []
tracy = ["systems/tracy"]

[workspace]
members = [
    ".",
    "crates/components-and-resources",
    "crates/systems",
    "crates/rendering",
    "crates/ray-collisions",
]

[profile.dev.package."systems"]
opt-level = 3

[profile.dev.package."ray-collisions"]
opt-level = 3

[profile.release]
debug = true

#lto = 'fat'
#codegen-units = 1

[patch.crates-io]
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy", branch = "main" }
