[package]
name = "fleet-renderer"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
bytemuck = "1.5.1"
pollster = "0.2.4"
ultraviolet = "0.8.1"
wgpu = { version = "0.8.1", features = ["cross"] }
winit = "0.25.0"
web-sys = { version = "0.3.50", optional = true }
rand = "0.8.3"
bevy_ecs = "0.5.0"
bevy_tasks = "0.5.0"
env_logger = "0.8.3"
wgpu_glyph = "0.12.0"

colstodian = { git = "https://github.com/termhn/colstodian", branch = "main" }

background = { path = "crates/background" }
systems = { path = "crates/systems" }
components-and-resources = { path = "crates/components-and-resources"}
rendering = { path = "crates/rendering" }

[features]
default = []
tracy = ["systems/tracy"]

[workspace]
members = [
    ".",
    "crates/background",
    "crates/components-and-resources",
    "crates/systems",
    "crates/rendering",
    "crates/ray-collisions",
]

[profile.dev.package."background"]
opt-level = 3

[profile.dev.package."components-and-resources"]
opt-level = 3

[profile.dev.package."systems"]
opt-level = 3

[profile.dev.package."ray-collisions"]
opt-level = 3

# Font rendering

[profile.dev.package."ttf-parser"]
opt-level = 3

[profile.dev.package."twox-hash"]
opt-level = 3

[profile.dev.package."glyph_brush_layout"]
opt-level = 3

[profile.dev.package."glyph_brush"]
opt-level = 3

[profile.dev.package."wgpu_glyph"]
opt-level = 3

[profile.release]
#debug = true

# lto = 'fat'
# codegen-units = 1
# panic = 'abort'

[patch.crates-io]
bevy_ecs = { git = "https://github.com/NathanSWard/bevy", branch = "nward/commands-error-handling" }
bevy_tasks = { git = "https://github.com/NathanSWard/bevy", branch = "nward/commands-error-handling" }
