[package]
name = "background"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spade = "1.8.2"
tint = "1.0.1"
noise = { version = "0.7.0", default-features = false }
ultraviolet = "0.8.1"
rand = "0.8.3"

components-and-resources = { path = "../components-and-resources"}
