[package]
name = "components-and-resources"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
bevy_ecs = "0.5.0"
bytemuck = { version = "1.5.1", features = ["derive"] }
gltf = { version = "0.16.0", default-features = false, features = ["utils"] }
image = { version = "0.23.14", features = ["png"], default-features = false }
rand = { version = "=0.8.3", features = ["small_rng"] }
ray-collisions = { path = "../ray-collisions/" }
rstar = { git = "https://github.com/expenses/rstar", branch = "selection-function-with-data" }
ultraviolet = { version = "0.8.1", features = ["bytemuck"] }
wgpu = "0.8.1"
wgpu_glyph = "0.12.0"
winit = "0.25"
structopt = { version = "0.3.21", default-features = false }
arrayvec = "0.7.1"
