[package]
name = "ray-collisions"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = { git = "https://github.com/expenses/rstar", branch = "selection-function-with-data" }
ultraviolet = "0.8.1"
