[package]
name = "rendering"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

[dependencies]
bytemuck = "1.5.1"
components-and-resources = { path = "../components-and-resources/" }
ultraviolet = "0.8.1"
wgpu = { version = "0.10.1", features = ["spirv"] }
colstodian = { git = "https://github.com/termhn/colstodian" }
bevy_ecs = "0.5.0"
