[package]
name = "systems"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

[dependencies]
bevy_ecs = { git = "https://github.com/NathanSWard/bevy", branch = "nward/commands-error-handling" }
bevy_tasks = { git = "https://github.com/NathanSWard/bevy", branch = "nward/commands-error-handling" }
bytemuck = "1.5.1"
components-and-resources = { path = "../components-and-resources/" }
parking_lot = "0.11.1"
ultraviolet = "0.8.1"
