[package]
name = "systems"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

[dependencies]
bevy_ecs = "0.5.0"
bevy_tasks = "0.5.0"
bytemuck = "1.5.1"
components-and-resources = { path = "../components-and-resources/" }
log = "0.4.14"
parking_lot = "0.11.1"
profiling = "1.0.1"
ultraviolet = "0.8.1"

[features]
tracy = ["profiling/profile-with-tracy"]
